--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <head>
-<meta HTTP-EQUIV="REFRESH" content="0; url=http://www.pocketmine.org/"/>
+<meta HTTP-EQUIV="REFRESH" content="0; url=http://www.pocketmine.net/"/>
 </head>
 </html>
